--- a/README.org
+++ b/README.org
@@ -35,6 +35,7 @@
 | *Terminal*      | Alacritty         | Alacritty         | Alacritty         |
 | *Editor*        | Nvim + Doom Emacs | Nvim + Doom Emacs | Nvim + Doom Emacs |
 | *Used by host*  | Desktop & VM      | Desktop & Laptop  | Macbook           |
+*Change protocol in flake.nix to get correct WM*
 
 * NixOS Installation Guide
 This flake currently has *3* hosts
