--- a/README.org
+++ b/README.org
@@ -25,8 +25,8 @@
 |-----------------+-------------------+-------------------+-------------------|
 | *Shell*         | Zsh               | Zsh               | Zsh               |
 | *DM*            | LightDM           | TTY1 Login        | /                 |
-| *WM*            | Bspwm             | Sway              | Yabai             |
-| *Compositor*    | Picom (jonaburg)  | Sway              | /                 |
+| *WM*            | Bspwm             | Hyprland          | Yabai             |
+| *Compositor*    | Picom (jonaburg)  | Hyprland          | /                 |
 | *Bar*           | Polybar           | Waybar            | /                 |
 | *Hotkeys*       | Sxhkd             | Sway              | Skhd              |
 | *Launcher*      | Rofi              | Rofi              | /                 |
@@ -34,8 +34,7 @@
 | *Notifications* | Dunst             | Dunst             | /                 |
 | *Terminal*      | Alacritty         | Alacritty         | Alacritty         |
 | *Editor*        | Nvim + Doom Emacs | Nvim + Doom Emacs | Nvim + Doom Emacs |
-| *Used by host*  | Desktop & VM      | Desktop & Laptop  | Macbook           |
-*Change protocol in flake.nix to get correct WM*
+| *Used by host*  | Desktop           | Laptop            | Macbook           |
 
 * NixOS Installation Guide
 This flake currently has *3* hosts
